# my-app-verge

./: .gitignore  Cargo.toml  README.md  SKILL.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.mts
.qwen/: settings.json
crates/my-app-draft/: Cargo.toml
crates/my-app-draft/bench/: benche_me.rs
crates/my-app-draft/src/: lib.rs
crates/my-app-draft/tests/: test_me.rs
crates/my-app-i18n/: Cargo.toml
crates/my-app-logging/: Cargo.toml
crates/my-app-logging/src/: lib.rs
crates/my-app-signal/: Cargo.toml
crates/my-app-signal/src/: lib.rs  unix.rs  windows.rs
crates/my-app-types/: Cargo.toml
crates/my-app-types/src/: runtime.rs
crates/tauri-plugin-my-app-sysinfo/src/: commands.rs
src/: index.html  main.tsx
src-tauri/: Cargo.toml  summary.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: constants.rs  lib.rs  main.rs
src-tauri/src/cmd/: app.rs  mod.rs  system.rs
src-tauri/src/config/: clash.rs  config.rs  encrypt.rs  mod.rs  prfitem.rs  profiles.rs  verge.rs
src-tauri/src/core/: manager.rs
src-tauri/src/utils/: dirs.rs  help.rs  init.rs  logging.rs  network.rs  notification.rs  schtasks.rs  server.rs  singleton.rs  window_manager.rs
src-tauri/src/utils/linux/: mime.rs  workarounds.rs
src-tauri/src/utils/resolve/: dns.rs  mod.rs  scheme.rs  ui.rs  window.rs
src/components/: LayoutItem.tsx
src/components/base/: base-error-boundary.tsx  index.ts
src/components/home/: home-profile-card.tsx
src/components/layout/: LayoutTraffic.tsx  WindowController.tsx  layout-traffic.tsx  notice-manager.tsx  traffic-graph.tsx  update-button.tsx  window-controller.tsx
src/components/shared/: traffic-error-boundary.tsx
src/hooks/: UseVerge.tsx  use-clash-data.ts  use-i18n.ts  use-listen.ts  use-memory-data.ts  use-profiles.ts  use-shared-ser-poller.ts  use-traffic-data.ts  use-visibility.ts  use-window.ts  useI18n.ts
src/pages/: _layout.tsx  _routers.tsx  home.tsx  settings.tsx
src/pages/_layout/hooks/: UseCustomTheme.ts  index.ts  useAppInitialization.ts  useLayoutEvents.ts  useLoadingOverlay.ts  useNavMenuOrder.ts
src/pages/_layout/utils/: index.ts  inital-loading-overlay.ts  notification-handlers.ts
src/providers/window/: index.ts  window-context.ts  window-provider.tsx
src/services/: cmds.ts  i8n.ts  preload.ts  states.ts
src/types/: global.d.ts
src/utils/: parse-traffic.ts  tauri-env.ts
