[package]
name = "my-new-app"
version = "0.1.0"
description = "my new clash"
authors = ["you"]
license = "GPL-3.0-only"
build = "build.rs"
edition = "2024"
rust-version = "1.91"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "my_new_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { workspace = true, features = [
  "devtools",
  "tray-icon",
  "image-ico",
  "image-png",
] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = {workspace = true}
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"

tauri-plugin-deep-link = "2.4.5"
tauri-plugin-window-state = "2.4.1"
zip = "7.0.0"
reqwest_dav = "0.2.2"
aes-gcm = { version = "0.10.3", features = ["std"] }
base64 = "0.22.1"
rand = "0.8"
getrandom = "0.3.4"
futures = "0.3.31"
gethostname = "1.1.0"
scopeguard = "1.2.0"
tauri-plugin-notification = "2.3.3"
tokio-stream = "0.1.17"
dirs = "5.0.1"
dirs-next = "2.0.0"
tempfile = "3.24.0"
backoff = { version = "0.4.0", features = ["tokio"] }
tauri-plugin-http = "2.5.4"
console-subscriber = { version = "0.5.0", optional = true }
tauri-plugin-devtools = { version = "2.0.1" }
tauri-plugin-mihomo = { git = "https://github.com/clash-verge-rev/tauri-plugin-mihomo" }
clash_verge_logger = { git = "https://github.com/clash-verge-rev/clash-verge-logger" }
async-trait = "0.1.89"
clash_verge_service_ipc = { version = "2.0.27", features = [
  "client",
], git = "https://github.com/clash-verge-rev/clash-verge-service-ipc" }
arc-swap = "1.8.0"
rust_iso3166 = "0.1.14"
dark-light = "2.0.0"
governor = "0.10.4"
serde = { workspace =true, features = ["derive"] }
serde_json = {workspace =true}
serde_yaml_ng = {workspace =true}

anyhow = {workspace =true}
tokio = {workspace =true}

parking_lot = {workspace =true}
log = {workspace =true}
flexi_logger = {workspace =true}

compact_str = {workspace =true}
smartstring = {workspace =true}
bitflags = { workspace = true }
chrono = "0.4"
nanoid = "0.4"
dunce = "1"
warp = { version = "0.4.2", features = ["server"] }
open = "5.3.3"
boa_engine = "0.21.0"
once_cell = { version = "1.21.3", features = ["parking_lot"] }
delay_timer = "0.11.6"
percent-encoding = "2.3.2"
reqwest = { version = "0.13.1", features = ["json", "cookies", "rustls", "form"] }
regex = "1.12.2"
sysproxy = { git = "https://github.com/clash-verge-rev/sysproxy-rs", features = [
  "guard",
] }
network-interface = { version = "2.0.4", features = ["serde"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2.5.1"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-updater = "2.9.0"

[target.'cfg(windows)'.dependencies]
deelevate = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[lints]
workspace = true


